chore: add Sentry monitor
